启动返回模板值&启动时清除已不再管理的字段